welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:23: error: ')' expected but integer literal found.
for (i<- to 4 )
            ^PictureMono:28: error: illegal start of simple expression
}
^