welcome.lessons.welcome.methods.picture.PictureMono.scala.code


	def faireV() {
		avance()
		baisseBrosse()
		leveBrosse()
		avance()
		gauche()
		avance()
		baisseBrosse()
		leveBrosse()
		recule()
		droite()
		avance()
		baisseBrosse()
		leveBrosse()
		avance()
	
		}
override def run() {

for (i<- to 4 )
{
	faireV()
}

}
